# OrganismEvolution

./: .gitattributes  .gitignore  BUILD_AND_RUN.md  CMakeLists.txt  DEVELOPMENT_COMPLETE.md  Dockerfile  IMPORTANT_BUILD_NOTE.md  KNOWN_ISSUES.md  PROJECT_PLAN.md  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  SETUP_GUIDE.md  build.sh  rebuild.bat
.claude/: .mcp.json  BUILD_INSTRUCTIONS.md  PROJECT_CONTEXT.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  test.yml
Runtime/Shaders/: Bloom.hlsl  Common.hlsl  Creature.hlsl  HeightmapGenerate.hlsl  InsectSwarm.hlsl  Lava.hlsl  Nametag.hlsl  ProceduralPattern.hlsl  SSAO.hlsl  SSR.hlsl  Sky.hlsl  SteeringCompute.hlsl  Terrain.hlsl  ToneMapping.hlsl  Underwater.hlsl  Vegetation.hlsl  VolumetricFog.hlsl  Water.hlsl  Weather.hlsl
SimulationDemo/: CHANGELOG.md
SimulationDemo/docs/: ARCHITECTURE.md  ARCHITECTURE_ROADMAP.md  BATCHING_STRATEGIES.md  CODE_QUALITY_AUDIT.md  CODING_STANDARDS.md  COMMON_BUGS.md  CONTROLS.md  CREATURES.md  DAY_NIGHT_CYCLE.md  DEBUGGING_GUIDE.md  DEBUG_LOGGING.md  DRAW_CALL_OPTIMIZATION.md  DX12_ERROR_CODES.md  DX12_MEMORY_PATTERNS.md  DX12_PIPELINE_GUIDE.md  DX12_RESOURCE_MANAGEMENT.md  ECOSYSTEM_DASHBOARD.md  ENTITY_SYSTEM_DESIGN.md  ERROR_HANDLING_GUIDE.md  FEATURE_EXPANSION.md  FRUSTUM_CULLING.md  GAME_LOOP_PATTERNS.md  GRASS_RENDERING.md  HLSL_BEST_PRACTICES.md  IMGUI_DEBUG_PANEL.md  INSTANCING_DEEP_DIVE.md  KNOWN_ISSUES.md  PERFORMANCE_FIXES.md  PROFILING_SETUP.md  PSO_OPTIMIZATION.md  REFACTORING_PLAN.md  RENDERING.md  ROOT_SIGNATURE_PATTERNS.md  SCALABILITY_PLAN.md  SHADER_OPTIMIZATION.md  SHADER_REFERENCE.md  SHADOW_MAPPING.md  SIMULATION_ARCHITECTURE.md  SPATIAL_PARTITIONING.md  TECHNOLOGY_DECISIONS.md  (+2 more)
docs/: AGENT1_BIOCHEMISTRY_HANDOFF.md  INDEX.md  PHASE10_AGENT10_VISUAL_PIPELINE.md  PHASE10_AGENT1_HANDOFF.md  PHASE10_AGENT1_SIM_STACK.md  PHASE10_AGENT2_WORLDGEN_WIRING.md  PHASE10_AGENT3_MULTI_ISLAND.md  PHASE10_AGENT4_BEHAVIOR_WIRING.md  PHASE10_AGENT5_ACTIVITY_POSE.md  PHASE10_AGENT6_BIOCHEM_INTEGRATION.md  PHASE10_AGENT7_SAVE_REPLAY.md  PHASE10_AGENT8_OBSERVER_UI.md  PHASE10_AGENT9_PERFORMANCE_INTEGRATION.md  PHASE11_AGENT10_CAMERA_CONTROLS.md  PHASE11_AGENT1_HANDOFF.md  PHASE11_AGENT1_SHORELINES.md  PHASE11_AGENT2_WORLD_SCALE.md  PHASE11_AGENT3_BIOME_VARIETY.md  PHASE11_AGENT3_HANDOFF.md  PHASE11_AGENT4_CREATURE_VARIETY.md  PHASE11_AGENT4_HANDOFF.md  PHASE11_AGENT5_CREATURE_LIST_UI.md  PHASE11_AGENT6_HANDOFF.md  PHASE11_AGENT6_NAMING_COVERAGE.md  PHASE11_AGENT7_HANDOFF.md  PHASE11_AGENT7_WATER_UNDERWATER.md  PHASE11_AGENT8_SPAWN_RELIABILITY.md  PHASE11_AGENT9_CREATURE_STABILITY.md  PHASE11_AGENT9_HANDOFF.md  PHASE7_AGENT1_UNIQUENESS.md  PHASE7_AGENT2_UNDERWATER_VISIBILITY.md  PHASE7_AGENT3_AQUATIC_TO_LAND.md  PHASE7_AGENT4_BEHAVIOR_VARIETY.md  PHASE7_AGENT5_MORPHOLOGY_VARIETY.md  PHASE7_AGENT6_ECOSYSTEM_DEPTH.md  PHASE7_AGENT7_DISCOVERY_LOOP.md  PHASE7_AGENT8_SHADERS_STYLE.md  PHASE7_AGENT9_CINEMATIC_CAMERA.md  PHASE8_AGENT10_PROCEDURAL_ANIMATION.md  PHASE8_AGENT1_SPECIES_IDENTITY.md  (+11 more)
docs/agent_prompts/: AGENT_PROMPTS_10_COMPREHENSIVE.md  AGENT_PROMPTS_COMPREHENSIVE.md  AGENT_PROMPTS_PHASE10_CLAUDE_LONGRUN.md  AGENT_PROMPTS_PHASE11_CLAUDE_LONGRUN.md  AGENT_PROMPTS_PHASE3_COMPREHENSIVE.md  AGENT_PROMPTS_PHASE4.md  AGENT_PROMPTS_PHASE5_3D_WORLD.md  AGENT_PROMPTS_PHASE6_CREATURE_VARIETY.md  AGENT_PROMPTS_PHASE7_FUN_UNIQUE.md  AGENT_PROMPTS_PHASE8_CLAUDE_LONGRUN.md  AGENT_PROMPTS_PHASE9_CLAUDE_LONGRUN.md
docs/archive/: API_REFERENCE.md  BUG_ANALYSIS_RESEARCH.md  BUILD_INSTRUCTIONS.md  BUILD_LINUX.md  CAMERA_CREATURE_SYNC_AGENT9.md  CAMERA_DRIFT_AGENT4.md  CHATGPT_CODE_REVIEW_PROMPT.md  CHUNKED_TERRAIN_INTEGRATION.md  CLAUDE_ONBOARDING.md  CREATURE_EXPANSION.md  CREATURE_VISIBILITY_AGENT2.md  CREATURE_VISIBILITY_INVESTIGATION.md  DEPRECATED_OPENGL.md  DX12_RENDERING_BEST_PRACTICES.md  FIXES_SUMMARY.md  GENETICS_SPECIATION.md  GLFWTIME_FIX.md  IMGUI_INPUT_AGENT8.md  LIGHTING_AGENT7.md  MORPHOLOGY_EVOLUTION.md  MOUSE_INVERT_AGENT5.md  NAMETAG_AGENT6.md  NEURAL_NETWORKS.md  OPENGL_FILES_TO_REMOVE.md  SENSORY_SYSTEMS.md  VEGETATION_AGENT3.md  WATER_FIX_AGENT1.md  WATER_SYSTEM_COMPREHENSIVE.md  WEBASSEMBLY.md
docs/features/: AQUATIC_CREATURES.md  ECOSYSTEM_DYNAMICS.md  FLYING_CREATURES.md  GENETICS_ANALYSIS.md
docs/implementation/: ANIMATION_ARCHITECTURE.md  AQUATIC_CREATURE_DESIGN.md  BIOME_DESIGN.md  CLIMATE_DYNAMICS_PLAN.md  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  ECOSYSTEM_IMPLEMENTATION.md  FLYING_CREATURE_DESIGN.md  GENETICS_IMPLEMENTATION.md  IMPLEMENTATION_NOTES.md  MORPHOLOGY_IMPLEMENTATION.md  NEAT_ALGORITHM_GUIDE.md  NEAT_ANALYSIS.md  NEAT_ARCHITECTURE.md  POSTPROCESS_PIPELINE_PLAN.md  REPLAY_INTEGRATION_PLAN.md  SAVE_FORMAT.md  SHADOW_DESIGN.md  SPECIATION_DESIGN.md  TERRAIN_CHUNKING_PLAN.md  UI_DESIGN.md
docs/issues_and_fixes/: AI_INTEGRATION_FIXES.md  BUG_FIXES.md  CODE_REVIEW_FIXES.md  DX12_RENDERER_FIXES.md  HELP_NEEDED.md  KNOWN_ISSUES.md  PROJECT_ISSUES.md  TODO.md  VEGETATION_FIX_SUMMARY.md
docs/performance/: OPTIMIZATION_PLAN.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION.md
docs/phase8/: PHASE8_AGENT10_PROCEDURAL_ANIMATION.md  PHASE8_AGENT1_SPECIES_IDENTITY.md
docs/phase8_agents/: PHASE8_AGENT8_CREATURE_INSPECTION.md
docs/phase_status/: CLEANUP_STATUS.md  DEVELOPMENT_COMPLETE.md  FINAL_VERIFICATION.md  FINAL_VERIFICATION_CHECKLIST.md  MIGRATION_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_SUMMARY.md  PHASE3_STATUS.md  PHASE4_INTEGRATION_REPORT.md
docs/platform_specific/: WIN32_INPUT_CHECKLIST.md  WIN32_INPUT_CODE_EXAMPLES.md  WIN32_INPUT_DIAGNOSTICS.md  WIN32_INPUT_README.md  WIN32_INPUT_VISUAL_REFERENCE.md
docs/reference/: COMPREHENSIVE_PLAN.md  COMPREHENSIVE_TODO_DOCUMENTATION.md  DOCUMENTATION.md  IMPROVEMENTS_SUMMARY.md  ROADMAP.md
docs/research/: ANIMATION_RESEARCH.md  AQUATIC_CREATURE_RESEARCH.md  COMPREHENSIVE_RESEARCH_DOCUMENT.md  (+10 more)
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
tests/: README.md  test_genome.cpp  test_integration.cpp  test_neural_network.cpp  test_performance.cpp  test_serialization.cpp  test_spatial_grid.cpp
(+449 files in other folders)
